# pastebin

./: .gitignore  Cargo.toml  README.md  index.html
assets/: index.html
migrations/2021-11-04-193746_create_paste/: up.sql
migrations/2021-11-04-193746_create_pastes/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
