[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "uuid"] }
uuid = { version = "0.8.2", features = ["v4"] }
rocket = "0.4.10"
rand = "0.8.4"
anyhow = "1.0.45"
